[gd_scene load_steps=7 format=3 uid="uid://dlslfoveebcid"]

[ext_resource type="Script" path="res://scenes/options_menu/options_menu.gd" id="1_edtaa"]
[ext_resource type="TileSet" uid="uid://ddakmqeqs0fmb" path="res://assets/map_tiles2.tres" id="2_a0v08"]
[ext_resource type="TileSet" uid="uid://bxqtnvjdndf4n" path="res://assets/map_tiles.tres" id="2_bslmt"]
[ext_resource type="AudioStream" uid="uid://cmif6ike1jjed" path="res://assets/music/battleraft_menu_theme.ogg" id="3_nv8rn"]
[ext_resource type="Material" uid="uid://un7v62ivswp4" path="res://assets/materials/water_shader_material.tres" id="4_jsg56"]
[ext_resource type="Material" uid="uid://cpoey1ek0owuq" path="res://assets/materials/pixelize_material.tres" id="5_a0tne"]

[node name="options_menu" type="Node2D"]
script = ExtResource("1_edtaa")
metadata/_edit_vertical_guides_ = []
metadata/_edit_horizontal_guides_ = []

[node name="water" type="TileMap" parent="."]
tile_set = ExtResource("2_a0v08")
format = 2
layer_0/tile_data = PackedInt32Array(16, 2, 0, 17, 2, 0, 18, 2, 0, 19, 2, 0, 20, 2, 0, 21, 2, 0, 22, 2, 0, 23, 2, 0, 24, 2, 0, 25, 2, 0, 26, 2, 0, 27, 2, 0, 28, 2, 0, 65564, 2, 0, 65563, 2, 0, 65562, 2, 0, 65561, 2, 0, 65560, 2, 0, 65559, 2, 0, 65558, 2, 0, 65557, 2, 0, 65556, 2, 0, 65555, 2, 0, 65554, 2, 0, 65553, 2, 0, 65552, 2, 0, 131088, 2, 0, 131089, 2, 0, 131090, 2, 0, 131091, 2, 0, 131092, 2, 0, 131093, 2, 0, 131094, 2, 0, 131095, 2, 0, 131096, 2, 0, 131097, 2, 0, 131098, 2, 0, 131099, 2, 0, 131100, 2, 0, 196636, 2, 0, 196635, 2, 0, 196634, 2, 0, 196633, 2, 0, 196632, 2, 0, 196631, 2, 0, 196630, 2, 0, 196629, 2, 0, 196628, 2, 0, 196627, 2, 0, 196626, 2, 0, 196625, 2, 0, 196624, 2, 0, 262160, 2, 0, 262161, 2, 0, 262162, 2, 0, 262163, 2, 0, 262164, 2, 0, 262165, 2, 0, 262166, 2, 0, 262167, 2, 0, 262168, 2, 0, 262169, 2, 0, 262170, 2, 0, 262171, 2, 0, 262172, 2, 0, 327708, 2, 0, 327707, 2, 0, 327706, 2, 0, 327705, 2, 0, 327704, 2, 0, 327703, 2, 0, 327702, 2, 0, 327701, 2, 0, 327700, 2, 0, 327699, 2, 0, 327698, 2, 0, 327697, 2, 0, 327696, 2, 0, 393232, 2, 0, 393233, 2, 0, 393234, 2, 0, 393235, 2, 0, 393236, 2, 0, 393237, 2, 0, 393238, 2, 0, 393239, 2, 0, 393240, 2, 0, 393241, 2, 0, 393242, 2, 0, 393243, 2, 0, 393244, 2, 0, 458780, 2, 0, 458779, 2, 0, 458778, 2, 0, 458777, 2, 0, 458776, 2, 0, 458775, 2, 0, 458774, 2, 0, 458773, 2, 0, 458772, 2, 0, 458771, 2, 0, 458770, 2, 0, 458769, 2, 0, 458768, 2, 0, 13, 2, 0, 12, 2, 0, 11, 2, 0, 10, 2, 0, 9, 2, 0, 8, 2, 0, 7, 2, 0, 6, 2, 0, 5, 2, 0, 4, 2, 0, 3, 2, 0, 2, 2, 0, 1, 2, 0, 65537, 2, 0, 65538, 2, 0, 65539, 2, 0, 65540, 2, 0, 65541, 2, 0, 65542, 2, 0, 65543, 2, 0, 65544, 2, 0, 65545, 2, 0, 65546, 2, 0, 65547, 2, 0, 65548, 2, 0, 65549, 2, 0, 131085, 2, 0, 131084, 2, 0, 131083, 2, 0, 131082, 2, 0, 131081, 2, 0, 131080, 2, 0, 131079, 2, 0, 131078, 2, 0, 131077, 2, 0, 131076, 2, 0, 131075, 2, 0, 131074, 2, 0, 131073, 2, 0, 196609, 2, 0, 196610, 2, 0, 196611, 2, 0, 196612, 2, 0, 196613, 2, 0, 196614, 2, 0, 196615, 2, 0, 196616, 2, 0, 196617, 2, 0, 196618, 2, 0, 196619, 2, 0, 196620, 2, 0, 196621, 2, 0, 262157, 2, 0, 262156, 2, 0, 262155, 2, 0, 262154, 2, 0, 262153, 2, 0, 262152, 2, 0, 262151, 2, 0, 262150, 2, 0, 262149, 2, 0, 262148, 2, 0, 262147, 2, 0, 262146, 2, 0, 262145, 2, 0, 327681, 2, 0, 327682, 2, 0, 327683, 2, 0, 327684, 2, 0, 327685, 2, 0, 327686, 2, 0, 327687, 2, 0, 327688, 2, 0, 327689, 2, 0, 327690, 2, 0, 327691, 2, 0, 327692, 2, 0, 327693, 2, 0, 393229, 2, 0, 393228, 2, 0, 393227, 2, 0, 393226, 2, 0, 393225, 2, 0, 393224, 2, 0, 393223, 2, 0, 393222, 2, 0, 393221, 2, 0, 393220, 2, 0, 393219, 2, 0, 393218, 2, 0, 393217, 2, 0, 458753, 2, 0, 458754, 2, 0, 458755, 2, 0, 458756, 2, 0, 458757, 2, 0, 458758, 2, 0, 458759, 2, 0, 458760, 2, 0, 458761, 2, 0, 458762, 2, 0, 458763, 2, 0, 458764, 2, 0, 458765, 2, 0)

[node name="TileMap" type="TileMap" parent="."]
tile_set = ExtResource("2_bslmt")
format = 2
layer_0/tile_data = PackedInt32Array(0, 1, 0, 1, 1, 0, 2, 1, 0, 3, 1, 0, 4, 1, 0, 5, 1, 0, 6, 1, 0, 7, 1, 0, 8, 1, 0, 9, 1, 0, 10, 1, 0, 11, 1, 0, 12, 1, 0, 13, 1, 0, 14, 1, 0, 15, 1, 0, 65551, 1, 0, 16, 1, 0, 65536, 1, 0, 131072, 1, 0, 196608, 1, 0, 262144, 1, 0, 327680, 1, 0, 393216, 1, 0, 458752, 1, 0, 524288, 1, 0, 589824, 1, 0, 655360, 1, 0, 720896, 1, 0, 786432, 1, 0, 851968, 1, 0, 917504, 1, 0, 983040, 1, 0, 1048576, 1, 0, 1048577, 1, 0, 1048578, 1, 0, 1048579, 1, 0, 1048580, 1, 0, 1048581, 1, 0, 1048582, 1, 0, 1048583, 1, 0, 1048584, 1, 0, 1048585, 1, 0, 1048586, 1, 0, 1048587, 1, 0, 1048588, 1, 0, 1048589, 1, 0, 65550, 1, 0, 131086, 1, 0, 196622, 1, 0, 262158, 1, 0, 327694, 1, 0, 393230, 1, 0, 458766, 1, 0, 524302, 1, 0, 589838, 1, 0, 655374, 1, 0, 720910, 1, 0, 786446, 1, 0, 851982, 1, 0, 917518, 1, 0, 983054, 1, 0, 1048590, 1, 0, 131087, 1, 0, 196623, 1, 0, 262159, 1, 0, 327695, 1, 0, 393231, 1, 0, 458767, 1, 0, 524303, 1, 0, 589839, 1, 0, 655375, 1, 0, 720911, 1, 0, 786447, 1, 0, 851983, 1, 0, 917519, 1, 0, 983055, 1, 0, 1048591, 1, 0, 1048592, 1, 0, 17, 1, 0, 1048593, 1, 0, 18, 1, 0, 1048594, 1, 0, 19, 1, 0, 1048595, 1, 0, 20, 1, 0, 1048596, 1, 0, 21, 1, 0, 1048597, 1, 0, 22, 1, 0, 1048598, 1, 0, 23, 1, 0, 1048599, 1, 0, 24, 1, 0, 1048600, 1, 0, 25, 1, 0, 1048601, 1, 0, 26, 1, 0, 1048602, 1, 0, 27, 1, 0, 1048603, 1, 0, 28, 1, 0, 1048604, 1, 0, 29, 1, 0, 65565, 1, 0, 131101, 1, 0, 196637, 1, 0, 262173, 1, 0, 327709, 1, 0, 393245, 1, 0, 458781, 1, 0, 524317, 1, 0, 589853, 1, 0, 655389, 1, 0, 720925, 1, 0, 786461, 1, 0, 851997, 1, 0, 917533, 1, 0, 983069, 1, 0, 1048605, 1, 0)

[node name="fancy_water" type="ColorRect" parent="."]
visible = false
material = ExtResource("4_jsg56")
offset_left = 32.0
offset_top = 32.0
offset_right = 448.0
offset_bottom = 512.0

[node name="ColorRect" type="ColorRect" parent="."]
visible = false
material = ExtResource("5_a0tne")
offset_left = 32.0
offset_top = 32.0
offset_right = 448.0
offset_bottom = 512.0

[node name="main_menu_button" type="Button" parent="."]
offset_left = 427.0
offset_top = 339.0
offset_right = 533.0
offset_bottom = 370.0
action_mode = 0
text = "Main Menu
"

[node name="AudioStreamPlayer2D" type="AudioStreamPlayer2D" parent="."]
stream = ExtResource("3_nv8rn")
autoplay = true
bus = &"Music"

[node name="mute" type="Button" parent="."]
offset_left = 416.0
offset_top = 379.0
offset_right = 551.0
offset_bottom = 410.0
toggle_mode = true
keep_pressed_outside = true
text = "Mute Everything
"

[node name="music_slider" type="HSlider" parent="."]
editor_description = "Music Volume Slider"
offset_left = 391.0
offset_top = 237.0
offset_right = 591.0
offset_bottom = 253.0
tooltip_text = "Music Volume Slider"
max_value = 1.0
step = 0.01
value = 1.0
tick_count = 30

[node name="RichTextLabel" type="RichTextLabel" parent="music_slider"]
custom_minimum_size = Vector2(200, 10)
layout_mode = 0
offset_left = 1.0
offset_top = -45.0
offset_right = 201.0
offset_bottom = -5.0
scale = Vector2(1, 1.01299)
text = "Music Volume"
fit_content = true

[node name="master_slider" type="HSlider" parent="."]
editor_description = "Music Volume Slider"
offset_left = 388.0
offset_top = 143.0
offset_right = 588.0
offset_bottom = 159.0
tooltip_text = "Music Volume Slider"
max_value = 1.0
step = 0.01
value = 1.0
tick_count = 30

[node name="RichTextLabel" type="RichTextLabel" parent="master_slider"]
custom_minimum_size = Vector2(200, 10)
layout_mode = 0
offset_left = 8.0
offset_top = -49.0
offset_right = 208.0
offset_bottom = -9.0
scale = Vector2(1, 1.01299)
text = "Master Volume"
fit_content = true

[node name="sound_effects_slider" type="HSlider" parent="."]
editor_description = "Music Volume Slider"
offset_left = 395.0
offset_top = 304.0
offset_right = 595.0
offset_bottom = 320.0
tooltip_text = "Music Volume Slider"
max_value = 1.0
step = 0.01
value = 1.0
tick_count = 30

[node name="RichTextLabel" type="RichTextLabel" parent="sound_effects_slider"]
custom_minimum_size = Vector2(250, 10)
layout_mode = 0
offset_top = -43.0
offset_right = 250.0
offset_bottom = -3.0
scale = Vector2(1, 1.01299)
text = "Sound Effect Volume"
fit_content = true

[node name="back_to_game" type="Button" parent="."]
visible = false
offset_left = 42.0
offset_top = 43.0
offset_right = 160.0
offset_bottom = 74.0
text = "Back To Game"

[connection signal="pressed" from="main_menu_button" to="." method="_on_main_menu_button_pressed"]
[connection signal="pressed" from="mute" to="." method="_on_mute_pressed"]
[connection signal="value_changed" from="music_slider" to="." method="_on_music_slider_value_changed"]
[connection signal="value_changed" from="master_slider" to="." method="_on_master_slider_value_changed"]
[connection signal="value_changed" from="sound_effects_slider" to="." method="_on_sound_effects_slider_value_changed"]
